Complete update to build with CMake 3.9

Move FieldComparison and StringComparison into models/ where thy're used
Update link targets for several tests

BUG:382680
FIXED-IN:3.1